Compile without qiprobe
This uses CMake variable WITH_PROBES which is already used to
activate/de-activate qiprobes.

The C++ code uses preprocessor macro WITH_PROBES which is set by CMake
function qiprobes_instrument_files.

Change-Id: I85058acf80d1094217ca3763998b8fcb0c84cd0a
Reviewed-on: http://gerrit.aldebaran.lan/55514
Approved: nrubinstein <nrubinstein@aldebaran-robotics.com>
Reviewed-by: nrubinstein <nrubinstein@aldebaran-robotics.com>
Tested-by: nrubinstein <nrubinstein@aldebaran-robotics.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,12 +52,17 @@ option(WITH_PERF     "Performances test" ON)
 enable_testing()
 include(CMakeDependentOption)
 
-find_package(qiprobes)
-qiprobes_create_probe(tp_qi
-  src/tp_qi.in.h
-  PROVIDER_NAME qi_qi)
-qiprobes_instrument_files(tp_qi
-  src/eventloop.cpp)
+if (WITH_PROBES)
+  find_package(qiprobes)
+  qiprobes_create_probe(tp_qi
+    src/tp_qi.in.h
+    PROVIDER_NAME qi_qi)
+  qiprobes_instrument_files(tp_qi
+    src/eventloop.cpp)
+  set(_tp_qi "tp_qi")
+else()
+  set(_tp_qi "")
+endif()
 
 set(QI_H qi/detail/clock.hxx
          qi/detail/eventloop.hxx
@@ -370,7 +375,7 @@ qi_create_lib(qi SHARED
                  ${QIM_H}    ${QIM_C}
                  ${QIPERF_H} ${QIPERF_C}
               DEPENDS BOOST BOOST_ATOMIC BOOST_DATE_TIME BOOST_THREAD BOOST_CHRONO BOOST_FILESYSTEM BOOST_LOCALE BOOST_REGEX BOOST_PROGRAM_OPTIONS ${_ssldeps}
-              SUBMODULE tp_qi)
+              SUBMODULE ${_tp_qi})
 
 if (WITH_QT_QTCORE)
   qi_use_lib(qi QT_QTCORE)
